fixed too high content area causing scrollbars

--- a/assets/_css-src/_general.sass
+++ b/assets/_css-src/_general.sass
@@ -150,7 +150,6 @@ body
 
     #content
         margin-bottom: 1.5em
-        min-height: 100%
         box-sizing: border-box
         overflow: hidden
 
